# task1_dynamic_memory_allocation_Dinahussam_main

./: CMakeLists.txt  MyArray.h  MyArray.tpp  README.md  main.cpp
